# ocr

./: .env  alembic.ini  docker-compose.yml  main.py  models.py  pyproject.toml  schemas.py
app/: database.py
app/application/: service.py
app/domain/: models.py  repositories.py
app/infrastructure/: dependencies.py
app/infrastructure/config/: settings.py
app/infrastructure/database/: mappers.py  orm.py  repositories.py  session.py
app/ocr/: models.py  routers.py
app/presentation/: routers.py  schemas.py
migrations/: env.py
migrations/versions/: c3bb1457c9b1_create_ocr_results_table.py
