[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.1",
    "python-dotenv>=1.0.0",
    "fastapi[standard]>=0.115.12",
    "openai>=1.79.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
    "pydantic-settings>=2.9.1",
]
